packages/istio-gateways/cluster-k3s-meowhq-dev-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cluster-k3s-meowhq-dev-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '*'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: wildcard-k3s-cluster-dns-tls
      mode: SIMPLE
