packages/istio-gateways/demo-meowhq-dev-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-meowhq-dev-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.demo.meowhq.dev'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '*.demo.meowhq.dev'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: wildcard-demo-meowhq-dev-tls
      mode: SIMPLE
